--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Quantico:ital,wght@0,400;0,700;1,400;1,700&family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
+
+@layer base {
+    .font-robot{
+        font-family: 'Quantico', sans-serif;
+    }
+    .font-sans{
+        font-family: 'Quattrocento Sans', sans-serif;
+    }
+    body{
+        font-family: 'Quattrocento Sans', sans-serif;
+        @apply bg-main-dark text-white
+    }
+}
