--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,3 +27,24 @@
         @apply border-red-500 focus:outline-none
     }
 }
+/* Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: red;
+  }
+  
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 7px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0.327);
+    border-radius: 5px;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 255, 0.189);
+    border-radius: 14px;
+    border: 3px solid var(--primary);
+  }
