--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,6 +27,15 @@
         @apply border-red-500 focus:outline-none
     }
 }
+@layer utilities{
+    .generator-button{
+
+        @apply bg-btn-primary py-2 px-4 rounded-xl shadow-xl shadow-btn-primary/[0.35] font-bold text-lg  flex items-center gap-2;
+    }
+    .download-button{
+        @apply bg-error-primary py-2 px-4 rounded-xl shadow-xl shadow-error-primary/[0.35] font-bold text-lg  flex items-center gap-2
+    }
+}
 /* Firefox */
 * {
     scrollbar-width: thin; 
