--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,7 +15,7 @@
 }
 @layer components{
     .commonBox{
-        @apply bg-secondary p-4 rounded-2xl min-h-[250px]
+        @apply bg-secondary p-4 rounded-2xl min-h-[250px] h-full
     }
     .commonBox-title-wrap{
         @apply flex items-center gap-4 mb-5
