--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,6 +32,9 @@
     .commonBox-title-wrap h4{
         @apply font-medium text-lg font-robot
     }
+    .page-upper-content-wrap{
+        @apply flex 2xl:flex-row flex-col   xl:justify-between xl:items-center mt-2 mb-5 gap-5
+    }
     input.error{
         @apply border-red-500 focus:outline-none
     }
@@ -42,7 +45,7 @@
         @apply bg-btn-primary py-2 px-4 rounded-xl shadow-xl shadow-btn-primary/[0.35] font-bold text-lg  flex items-center gap-2;
     }
     .download-button{
-        @apply bg-error-primary py-2 px-4 rounded-xl shadow-xl shadow-error-primary/[0.35] font-bold text-lg  flex items-center gap-2
+        @apply bg-cyan-600 py-2 px-4 rounded-xl shadow-xl shadow-cyan-500/[0.35] font-bold text-lg  flex items-center gap-2
     }
 }
 /* Firefox */
@@ -113,3 +116,58 @@
     transform: translateY(0%); 
     box-shadow: none; 
 } 
+
+
+.backdrop {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%; 
+  }
+  
+  .loader {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    --min-size: 2px;
+    --max-size: 15px;
+  }
+  
+  .dot { 
+    margin: 5px;
+    animation-name: loader;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    @apply bg-cyan-500
+  }
+  
+  .dot:nth-child(1) {
+    animation-delay: 0.2s;
+  }
+  .dot:nth-child(2) {
+    animation-delay: 0.4s;
+  }
+  .dot:nth-child(3) {
+    animation-delay: 0.6s;
+  }
+  .dot:nth-child(4) {
+    animation-delay: 0.8s;
+  }
+  .dot:nth-child(5) {
+    animation-delay: 1s;
+  }
+  
+  @keyframes loader {
+    from {
+      width: var(--min-size);
+      height: var(--min-size);
+      border-radius: calc(var(--min-size) / 2);
+    }
+    to {
+      width: var(--max-size);
+      height: var(--max-size);
+      border-radius: calc(var(--max-size) / 2);
+    }
+  }
