--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,6 +38,15 @@
     input.error{
         @apply border-red-500 focus:outline-none
     }
+    .home-heading{
+      @apply text-5xl leading-[60px] font-semibold 
+    }
+    .custom-selection-wrap >div >div{
+      @apply bg-main-dark text-cyan-400 border-none
+    }
+    .section-padding{
+      @apply pt-[120px] 2xl:pt-[200px]
+    }
 }
 @layer utilities{
     .generator-button{
@@ -47,6 +56,7 @@
     .download-button{
         @apply bg-cyan-600 py-2 px-4 rounded-xl shadow-xl shadow-cyan-500/[0.35] font-bold text-lg  flex items-center gap-2
     }
+    
 }
 /* Firefox */
 * {
