--- a/app/globals.css
+++ b/app/globals.css
@@ -40,6 +40,9 @@
   .banner-heading {
     @apply text-4xl lg:text-7xl font-mon lg:leading-[90px] font-bold text-center;
   }
+  .home-heading {
+    @apply text-3xl lg:text-5xl font-semibold;
+  }
   .custom-selection-wrap > div > div {
     @apply bg-main-dark text-cyan-400 border-none;
   }
